--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -138,6 +138,10 @@ body::before {
     margin-block: 0.8rem 3.5rem;
 }
 
+.image img {
+    width: 95%;
+}
+
 .overview {
     color: #ffffff;
     letter-spacing: 0.3125rem;
@@ -388,7 +392,7 @@ footer>.container {
     }
     /**** CARDS STYLES ****/
     .card {
-        width: 47%;
+        width: 48%;
     }
     .card-body {
         padding-block: 1.375rem;
